Skip to content

TS and M2TS breaks with subtitle files

As reported in: http://forum.videolan.org/viewtopic.php?f=14&t=65172

VLC cannot handle the situation where there is something.m2ts file and something.srt (or .txt) text file in same folder. When something.m2ts is opened VLC cannot proceed, it only prints some stuff to message log. If the text file is removed from the folder, the playback starts normally.

Sample video http://av.watch.impress.co.jp/docs/20060809/ezlp1.m2ts

Sample subtitle http://koti.mbnet.fi/raiska/vlc_samples/ezlp1.srt

Message log when both files are in same folder

main debug: adding item `ezlp1.m2ts' ( C:\ezlp1.m2ts )
qt4 debug: Adding a new MRL to recent ones: C:\ezlp1.m2ts
main debug: rebuilding array of current - root Playlist
main debug: rebuild done - 11 items, index 9
main debug: processing request item ezlp1.m2ts node Playlist skip 0
main debug: resyncing on ezlp1.m2ts
main debug: ezlp1.m2ts is at 10
main debug: starting new item
main debug: creating new input thread
main debug: Creating an input for 'ezlp1.m2ts'
main debug: thread (input) created at priority 1 (../.././src/input/input.c:230)
main debug: thread started
main debug: using timeshift granularity of 50 MBytes
main debug: using timeshift path 'C:\Temp'
main debug: `C:\ezlp1.m2ts' gives access `' demux `' path `C:\ezlp1.m2ts'
main debug: creating demux: access='' demux='' path='C:\ezlp1.m2ts'
main debug: looking for access_demux module: 3 candidates
main debug: TIMER module_need() : 1.070 ms - Total 1.070 ms / 1 intvls (Avg 1.070 ms)
main debug: creating access '' path='C:\ezlp1.m2ts'
main debug: looking for access module: 5 candidates
vcd debug: trying .cue file: C:\ezlp1.cue
vcd debug: could not find .cue file
access_file debug: opening file `C:\ezlp1.m2ts'
main debug: using access module "access_file"
main debug: TIMER module_need() : 2.035 ms - Total 2.035 ms / 1 intvls (Avg 2.035 ms)
main debug: Using AStream*Stream
main debug: pre buffering
main debug: received first data after 0 ms
main debug: pre-buffering done 1024 bytes in 0s - 9174 kbytes/s
main debug: looking for stream_filter module: 2 candidates
main debug: TIMER module_need() : 0.413 ms - Total 0.413 ms / 1 intvls (Avg 0.413 ms)
main debug: looking for stream_filter module: 1 candidate
main debug: using stream_filter module "stream_filter_record"
main debug: TIMER module_need() : 0.435 ms - Total 0.435 ms / 1 intvls (Avg 0.435 ms)
main debug: creating demux: access='' demux='' path='C:\ezlp1.m2ts'
main debug: looking for demux module: 50 candidates
main debug: using demux module "ts"
main debug: TIMER module_need() : 3.657 ms - Total 3.657 ms / 1 intvls (Avg 3.657 ms)
main debug: looking for a subtitle file in C:\
main debug: autodetected subtitle: C:\ezlp1.srt with priority 4
main debug: `C:\ezlp1.srt' gives access `' demux `' path `C:\ezlp1.srt'
main debug: creating demux: access='' demux='subtitle' path='C:\ezlp1.srt'
main debug: looking for access_demux module: 3 candidates
main debug: TIMER module_need() : 1.023 ms - Total 1.023 ms / 1 intvls (Avg 1.023 ms)
main debug: creating access '' path='C:\ezlp1.srt'
main debug: looking for access module: 5 candidates
vcd debug: trying .cue file: C:\ezlp1.cue
vcd debug: could not find .cue file
access_file debug: opening file `C:\ezlp1.srt'
main debug: using access module "access_file"
main debug: TIMER module_need() : 2.546 ms - Total 2.546 ms / 1 intvls (Avg 2.546 ms)
main debug: Using AStream*Stream
main debug: pre buffering
main debug: received first data after 0 ms
main debug: pre-buffering done 1024 bytes in 0s - 4310 kbytes/s
main debug: looking for stream_filter module: 2 candidates
main debug: TIMER module_need() : 0.637 ms - Total 0.637 ms / 1 intvls (Avg 0.637 ms)
main debug: looking for stream_filter module: 1 candidate
main debug: using stream_filter module "stream_filter_record"
main debug: TIMER module_need() : 0.464 ms - Total 0.464 ms / 1 intvls (Avg 0.464 ms)
main debug: creating demux: access='' demux='subtitle' path='C:\ezlp1.srt'
main debug: looking for demux module: 3 candidates
vobsub debug: this doesn't seem to be a vobsub file
main error: option sub-original-fps does not exist
subtitle debug: Movie fps: -1.000000
subtitle debug: autodetecting subtitle format
subtitle debug: detected SubRIP format
subtitle debug: loading all subtitles...
subtitle debug: loaded 52 subtitles
main debug: selecting program id=0
main debug: using demux module "subtitle"
main debug: TIMER module_need() : 5.182 ms - Total 5.182 ms / 1 intvls (Avg 5.182 ms)
main debug: looking for decoder module: 36 candidates
avcodec debug: libavcodec already initialized
avcodec debug: codec not found (Plain text subtitles)
subsdec debug: trying configured character encoding: not specified
subsdec debug: trying default character encoding: CP1252
subsdec debug: using automatic UTF-8 detection
main debug: using decoder module "subsdec"
main debug: TIMER module_need() : 2.125 ms - Total 2.125 ms / 1 intvls (Avg 2.125 ms)
main debug: thread (decoder) created at priority 0 (../.././src/input/decoder.c:315)
main debug: thread started
ts debug: DEMUX_SET_GROUP 0 0
main debug: `C:\ezlp1.m2ts' successfully opened
ts warning: lost synchro
ts debug: skipping 4 bytes of garbage
ts debug: pid[256] unknown
ts debug: pid[31] unknown
ts debug: pid[4097] unknown
ts debug: pid[4113] unknown
ts debug: pid[4352] unknown
ts debug: pid[4608] unknown
ts debug: PATCallBack called
ts debug: new PAT ts_id=0 version=0 current_next=1
ts debug:   * number=0 pid=31
ts debug:   * number=1 pid=256
ts debug: PMTCallBack called
ts debug: new PMT program number=1 version=0 pid_pcr=4097
ts debug:  * descriptor : registration HDMV
ts debug:  * descriptor : unknown (0x88)
ts debug:   * es pid=4113 type=27 dr->i_tag=0x5
ts debug:   * es pid=4113 type=27 fcc=h264
ts debug:   * es pid=4352 type=129 dr->i_tag=0x5
ts debug:   * es pid=4352 type=129 dr->i_tag=0x81
ts debug:   * es pid=4352 type=129 fcc=a52 
ts debug:   * es pid=4608 type=144 *unknown*
ts warning: first packet for pid=4113 cc=0xf
ts warning: first packet for pid=4352 cc=0x2
main debug: slave 0 EOF
ts warning: first packet for pid=4608 cc=0x7
ts debug: eof ?
main debug: EOF reached
main debug: finished input
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main warning: no vout found, dropping subpicture
main warning: can't get output subpicture
subsdec warning: can't get spu buffer
main debug: thread times: real 0m0.187500s, kernel 0m0.015625s, user 0m0.000000s
main debug: removing module "subsdec"
main debug: killing decoder fourcc `subt', 0 PES in FIFO
ts debug: pid list:
ts debug:   - pid[0] seen
ts debug:   - pid[31] seen
ts debug:   - pid[256] seen
ts debug:   - pid[4097] seen
ts debug:   - pid[4113] seen
main debug: Program doesn't contain anymore ES
ts debug:   - pid[4352] seen
ts debug:   - pid[4608] seen
ts debug:   - pid[8191] seen
main debug: removing module "ts"
main debug: removing module "stream_filter_record"
main debug: removing module "access_file"
main debug: removing module "subtitle"
main debug: removing module "stream_filter_record"
main debug: removing module "access_file"
main debug: Program doesn't contain anymore ES
main debug: thread ended
main debug: dead input
main debug: thread times: real 0m0.218750s, kernel 0m0.109375s, user 0m0.093750s
main debug: TIMER input launching for 'ezlp1.m2ts' : 49.593 ms - Total 49.593 ms / 1 intvls (Avg 49.593 ms)
main debug: changing item without a request (current 10/11)
main debug: nothing to play
Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information